ViewBag.Title = "Home Page";改为ViewBag.Title = "Home";

--- a/Eddyt.Blog.Admin/Views/Home/Index.cshtml
+++ b/Eddyt.Blog.Admin/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Eddyt.Blog.Data.PageResult<Eddyt.Blog.Data.Article>
 
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <p>
