--- a/Eddyt.Blog.Web/Views/Home/Index.cshtml
+++ b/Eddyt.Blog.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Eddyt.Blog.Data.PageResult<Eddyt.Blog.Data.Article>
+﻿@using Eddyt.Blog.Web.Common
+@model Eddyt.Blog.Data.PageResult<Eddyt.Blog.Data.Article>
 
 @{
     ViewBag.Title = "Home Page";
@@ -13,8 +14,8 @@
 
             <div class="post-content">
 
-                @(article.Content.Length > 200 ? article.Content.Substring(0, 200) : article.Content)
-
+                @StringHelper.HtmlToTxt(article.Content.Length > 200 ? article.Content.Substring(0, 200) : article.Content)
+                […]
             </div>
 
         </article>
