--- a/Eddyt.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Eddyt.Blog.Web/Views/Shared/_Layout.cshtml
@@ -26,20 +26,16 @@
 
     <link href="~/Content/yzm/css/metro-bootstrap.css" rel="stylesheet" />
 
-    <link href="~/Content/yzm/css/normalize.css" rel="stylesheet" />
-
     <link href="~/Content/yzm/css/grid.css" rel="stylesheet" />
 
     <link href="~/Content/yzm/css/style.css" rel="stylesheet" />
 
 
+    <link href="http://cdn.bootcss.com/normalize/2.1.3/normalize.min.css" rel="stylesheet">
 
-    <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
-
-    <script src="http://cdn.bootcss.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
-    
-    @*<script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/bootstrap.js"></script>*@
+    @*<link href="~/Content/yzm/css/normalize.css" rel="stylesheet" />
+        <script src="~/Scripts/jquery-1.10.2.js"></script>
+        <script src="~/Scripts/bootstrap.js"></script>*@
 
 </head>
 
@@ -61,7 +57,7 @@
 
                 <div class="site-name col-mb-12 col-9">
 
-                    <a id="logo" href="http://www.eddyt.me/">
+                    <a id="logo" href="http://eddyt.me/">
 
                         Eddy's Blog
 
@@ -75,7 +71,7 @@
 
                     <nav id="nav-menu" class="clearfix" role="navigation">
 
-                        <a class="current" href="http://www.eddyt.me/"><span class="glyphicon glyphicon-home"></span> 首页</a>
+                        <a class="current" href="http://eddyt.me/"><span class="glyphicon glyphicon-home"></span> 首页</a>
 
                         <a href="#"><span class="glyphicon glyphicon-pencil"></span> 留言</a>
 
@@ -108,6 +104,22 @@
         &copy; @DateTime.Now.Year  <a href="#">Eddy's Blog</a>.
 
     </footer><!-- end #footer -->
+
+    <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
+
+    <script src="http://cdn.bootcss.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+
+    <div id="clicki_widget_8100" title=""></div>
+    <script type='text/javascript'>
+        (function () {
+            var c = document.createElement('script');
+            c.type = 'text/javascript';
+            c.async = true;
+            c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.clicki.cn/boot/51412';
+            var h = document.getElementsByTagName('script')[0];
+            h.parentNode.insertBefore(c, h);
+        })();
+    </script>
 
 </body>
 
