底部版权信息添加链接

--- a/Eddyt.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Eddyt.Blog.Web/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
 
     <footer id="footer" role="contentinfo">
 
-        &copy; @DateTime.Now.Year  <a href="#">Eddy's Blog</a>.
+        &copy; @DateTime.Now.Year  <a href="http://eddyt.me/">Eddy's Blog</a>.
 
     </footer><!-- end #footer -->
 
