ViewBag.Title = "Home"

--- a/Eddyt.Blog.Web/Views/Home/Index.cshtml
+++ b/Eddyt.Blog.Web/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @model Eddyt.Blog.Data.PageResult<Eddyt.Blog.Data.Article>
 
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div class="col-mb-12" id="main" role="main">
