修改关于链接

--- a/Eddyt.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Eddyt.Blog.Web/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
 
                         <a class="current" href="http://eddyt.me/"><span class="glyphicon glyphicon-home"></span> 首页</a>
 
-                        <a href="#"><span class="glyphicon glyphicon-pencil"></span> 留言</a>
+                        <a href="~/home/about"><span class="glyphicon glyphicon-pencil"></span> 关于</a>
 
                     </nav>
 
