--- a/Eddyt.Blog.Admin/Views/Home/Index.cshtml
+++ b/Eddyt.Blog.Admin/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="col-md-3">
         <div class="list-group">
             <a href="~/" class="list-group-item active">文章管理</a>
-            <a href="#" class="list-group-item">评论管理</a>
+            <a href="~/home/CommentManager" class="list-group-item">评论管理</a>
         </div>
     </div>
     <div class="col-md-9">
